[gd_scene load_steps=6 format=3 uid="uid://hkwnmy1glpiv"]

[ext_resource type="PackedScene" uid="uid://ry2gx0ka87xl" path="res://scenes/backdrop.tscn" id="1_s1lcf"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_vcd71"]
[ext_resource type="Texture2D" uid="uid://f4k65gw5ctu7" path="res://assets/hint.png" id="2_3ofbb"]
[ext_resource type="PackedScene" uid="uid://c6wofbnlu72ed" path="res://scenes/titlescreen.tscn" id="2_4nb71"]
[ext_resource type="PackedScene" uid="uid://bpi2jsm6pfcum" path="res://scenes/emptymessage.tscn" id="3_n7en5"]

[node name="Main" type="Node"]
script = ExtResource("1_vcd71")

[node name="Backdrop" parent="." instance=ExtResource("1_s1lcf")]

[node name="RevenueButton" type="Button" parent="."]
offset_left = 27.0
offset_top = 167.0
offset_right = 936.0
offset_bottom = 786.0
theme_override_colors/font_disabled_color = Color(0.607843, 0.45098, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.607843, 0.45098, 0, 1)
theme_override_colors/font_hover_color = Color(0.607843, 0.45098, 0, 1)
theme_override_colors/font_pressed_color = Color(0.607843, 0.45098, 0, 1)
theme_override_colors/font_focus_color = Color(0.607843, 0.45098, 0, 1)
theme_override_colors/font_color = Color(0.607106, 0.44993, 5.77569e-07, 1)
theme_override_font_sizes/font_size = 113
text = "$$ 
COLLECT REVENUE
$$"
autowrap_mode = 3

[node name="UpgradeLevel" type="Button" parent="."]
offset_left = 945.0
offset_top = 112.0
offset_right = 1431.0
offset_bottom = 318.0
theme_override_font_sizes/font_size = 60
text = "UPGRADE LEVEL"

[node name="BuyWarehouse" type="Button" parent="."]
offset_left = 946.0
offset_top = 324.0
offset_right = 1430.0
offset_bottom = 581.0
theme_override_font_sizes/font_size = 60
text = "BUY WAREHOUSE"
autowrap_mode = 3

[node name="UpgradeLuck" type="Button" parent="."]
offset_left = 945.0
offset_top = 588.0
offset_right = 1431.0
offset_bottom = 794.0
theme_override_font_sizes/font_size = 60
text = "UPGRADE LUCK"

[node name="Hint" type="TextureButton" parent="."]
offset_left = 1338.0
offset_top = 7.0
offset_right = 1431.0
offset_bottom = 94.0
texture_normal = ExtResource("2_3ofbb")
texture_pressed = ExtResource("2_3ofbb")
texture_hover = ExtResource("2_3ofbb")
texture_disabled = ExtResource("2_3ofbb")
texture_focused = ExtResource("2_3ofbb")
ignore_texture_size = true
stretch_mode = 3

[node name="LevelCost" type="Label" parent="."]
offset_left = 974.0
offset_top = 262.0
offset_right = 1051.0
offset_bottom = 290.0
theme_override_font_sizes/font_size = 20
text = "Cost: $0"

[node name="WaresCost" type="Label" parent="."]
offset_left = 975.0
offset_top = 528.0
offset_right = 1052.0
offset_bottom = 556.0
theme_override_font_sizes/font_size = 20
text = "Cost: $0"

[node name="LuckCost" type="Label" parent="."]
offset_left = 981.0
offset_top = 737.0
offset_right = 1058.0
offset_bottom = 765.0
theme_override_font_sizes/font_size = 20
text = "Cost: $0"

[node name="Money" type="Label" parent="."]
offset_left = 15.0
offset_top = 14.0
offset_right = 175.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 30
text = "MONEY: $0"

[node name="Level" type="Label" parent="."]
offset_left = 624.0
offset_top = 36.0
offset_right = 742.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 30
text = "LEVEL: 0"

[node name="Warehouses" type="Label" parent="."]
offset_left = 507.0
offset_top = 68.0
offset_right = 742.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 30
text = "WAREHOUSES: 0"

[node name="LuckLevel" type="Label" parent="."]
offset_left = 540.0
offset_top = 100.0
offset_right = 742.0
offset_bottom = 142.0
theme_override_font_sizes/font_size = 30
text = "LUCK LEVEL: 0"

[node name="Help" parent="." instance=ExtResource("3_n7en5")]
visible = false

[node name="Label" type="Label" parent="Help"]
offset_left = -176.0
offset_top = -175.0
offset_right = 139.0
offset_bottom = 163.0
theme_override_colors/font_color = Color(0.10748, 0.10748, 0.10748, 1)
theme_override_font_sizes/font_size = 13
text = "Hello! Welcome to Capitalism: The Game! This message exists to help you get started. Use money you earn from collecting revenue to upgrade your level. The higher your level, the more money you earn, but the more risk you take when you collect that revenue. If you have the money, buy warehouses that store stock that you can sell to people. The money will always come back to you when you collect revenue, which increases the amount of money you can earn significantly, without any added risk!"
autowrap_mode = 3

[node name="Menu" parent="." instance=ExtResource("2_4nb71")]
visible = false

[connection signal="pressed" from="RevenueButton" to="." method="_on_revenue_button_pressed"]
[connection signal="pressed" from="UpgradeLevel" to="." method="_on_upgrade_level_pressed"]
[connection signal="pressed" from="Hint" to="." method="_on_hint_pressed"]
[connection signal="play" from="Menu" to="." method="_on_menu_play"]
